# vibecoded_mc_renderer

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  publish.yml
examples/: batch_render.py  render_stone.py
src/vibecoded_mc_renderer/: cli.py
src/vibecoded_mc_renderer/rendering/: isometric.py  machine_renderer.py  renderer_3d.py
src/vibecoded_mc_renderer/utils/: colors.py
tests/: README.md  conftest.py
