[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vibecoded-mc-renderer"
version = "0.1.0"
description = "CLI tool for rendering Minecraft blocks from jar files"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "VibeCoded"}
]
dependencies = [
    "Pillow>=9.0.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "numpy>=1.20.0",
    "moderngl>=5.6.0",
    "pyrr>=0.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "mypy>=0.990",
    "ruff>=0.0.260",
]

[project.scripts]
mcrender = "vibecoded_mc_renderer.__main__:main"

[tool.black]
line-length = 100
target-version = ['py38']

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
